# swarm-simulator

./: .gitmodules  CMakeLists.txt  README.md  getting_started.md  imgui.ini  main.cpp
.github/workflows/: build.yml
app/: CMakeLists.txt
app/src/: main.cpp
example/: CMakeLists.txt
example/include/: Boids.h  PropertyPanel.h
example/src/: Boids.cpp  PropertyPanel.cpp  main.cpp
include/imgui_glfw_opengl3_impl/: CMakeLists.txt  imgui.cpp
sar-coverage-planner/: CMakeLists.txt  README.md
sar-coverage-planner/include/core/: CGALDefinitions.h  CGALUtil.h  CGALconfig.h  Log.h  Polygon.h
sar-coverage-planner/include/planner/: BCD.h  BoustrophedonCellularDecomposition.h  CoveragePlanner.h  Plan.h  PolygonDecomposition.h  WeaklyMonotone.h  decomposition.h
sar-coverage-planner/src/core/: CGALUtil.cpp  Log.cpp  Polygon.cpp
sar-coverage-planner/src/planner/: BCD.cpp  BoustrophedonCellularDecomposition.cpp  CoveragePlanner.cpp  Plan.cpp  WeaklyMonotone.cpp  decomposition.cpp
src/Application/: Application.cpp  Application.h
src/application/: Application.cpp  Application.h
src/core/: Log.h
src/sim/: RandomRobot.cpp  RandomRobot.h  Robot.cpp  Robot.h  Simulator.cpp  Simulator.h  SimulatorState.h
src/ui/: PropertyPanel.cpp  PropertyPanel.h  PropertyPanel.hpp  SimulatorView.cpp  SimulatorView.h  SimulatorView.hpp
swarmsim/: CMakeLists.txt
swarmsim/include/: Application.h  PropertyPanel.h  Robot.h  Simulator.h  SimulatorView.h
swarmsim/include/application/: Application.h  Boids.h  PropertyPanel.h  SwarmSim.h  SwarmSimulator.h
swarmsim/include/core/: Log.h  Random.h
swarmsim/include/sim/: Boids.h  Environment.h  EnvironmentState.h  EventTimer.h  RandomRobot.h  Robot.h  Simulator.h  SimulatorState.h
swarmsim/include/ui/: ImGuiUtil.h  PropertyPanel.h  SimulatorView.h  Widget.h
swarmsim/src/application/: Application.cpp  Boids.cpp  PropertyPanel.cpp  SwarmSim.cpp  SwarmSimulator.cpp
swarmsim/src/core/: Log.cpp
swarmsim/src/sim/: Boids.cpp  Environment.cpp  EnvironmentState.cpp  EventTimer.cpp  RandomRobot.cpp  Robot.cpp  Simulator.cpp  SimulatorState.cpp
swarmsim/src/ui/: PropertyPanel.cpp  SimulatorView.cpp  Widget.cpp
workflows/: build.yml
